--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.1.7"
 loguru = "^0.6.0"
+psycopg2 = "^2.9.5"
+python-decouple = "^3.8"
 
 
 [build-system]
