--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^4.1.7"
 loguru = "^0.6.0"
 psycopg2 = "^2.9.5"
 python-decouple = "^3.8"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
